# ml-sleep

./: .gitignore  README.md  config.yaml  pyproject.toml
app/: cli.py  data.py  model.py  train.py
notebooks/: analysis.ipynb  coreml.ipynb  sleep.mlmodel
